fix bug: index will not auto increase bug.